# stock-predictor-1

./: README.md
.claude/: launch.json  settings.local.json
server/: .gitignore  data_loader.py  features.py  main.py  model.py  pyproject.toml
server/artifacts/: VCN_metrics.json  VCN_model.joblib  VFV_metrics.json  VFV_model.joblib  VSP_metrics.json  VSP_model.joblib  XIC_metrics.json  XIC_model.joblib  XIU_metrics.json  XIU_model.joblib  XUS_metrics.json  XUS_model.joblib
server/notebooks/: feature.ipynb  index_funds.ipynb  model_base.ipynb
server/notebooks/data/: VCN_TO.csv  VCN_TO_CLEAN.csv  VFV_TO.csv  VFV_TO_CLEAN.csv  VSP_TO.csv  VSP_TO_CLEAN.csv  XIC_TO.csv  XIC_TO_CLEAN.csv  XIU_TO.csv  XIU_TO_CLEAN.csv  XUS_TO.csv  XUS_TO_CLEAN.csv
stock-predictor-1/: index.html  package-lock.json  package.json
stock-predictor-1/src/: App.tsx  index.css
stock-predictor-1/src/components/: Dashboard.tsx  IndicatorCharts.tsx  ModelMetrics.tsx  PredictionHero.tsx  PriceChart.tsx  StatsBar.tsx  main.tsx
stock-predictor-1/src/hooks/: useStockData.ts
stock-predictor-1/src/lib/: api.ts  types.ts
