[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "yfinance>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "joblib>=1.5.0",
]
